--- a/src/views/SelectUserType.mxml
+++ b/src/views/SelectUserType.mxml
@@ -3,6 +3,7 @@
 		xmlns:s="library://ns.adobe.com/flex/spark" creationComplete="init(event)" removedFromStage="view1_removedFromStageHandler(event)" xmlns:components="views.components.*" xmlns:mx="library://ns.adobe.com/flex/mx">
 	<fx:Script>
 		<![CDATA[
+
         import com.alfo.UserObject;
         import com.alfo.res.Resource;
 
@@ -16,7 +17,7 @@
         import mx.validators.Validator;
 
         protected var validatorArr:Array;
-        protected var alfo:UserObject;
+
 
         var timer:Timer;
 
@@ -28,7 +29,7 @@
             groupWidth = normalbut.width;
             //this.navigator.addEventListener(UserObjectEvent.STATUS_CHANGE,checkNetStatus);
             trace("opening  welcome screen");
-            alfo = UserObject.getInstance();
+
 
 
             validatorArr = new Array();
@@ -45,7 +46,7 @@
 
         protected function checkNetStatus(e:UserObjectEvent) {
             trace("net status event inside userselect");
-            if (alfo.isConnected) {
+            if (UserObject.instance.isConnected) {
                 faceBtn.visible = true;
                 faceSpacer.visible = true;
                 faceBtn.includeInLayout = true;
@@ -95,7 +96,7 @@
         }
 
         protected function extraCheck_clickHandler(event:MouseEvent):void {
-            alfo.extraterms = !extraCheck.selected;
+            UserObject.instance.extraterms = !extraCheck.selected;
 
         }
         ]]>
